# solitaire

./: .gitignore  Makefile.am  README.md  configure.ac  run_tests.sh
doc/: Makefile.am  solitaire.texi
src/: Makefile.am  card.c  card.h  deck.c  deck.h  deckgen.c  deckgen.h  pontifex.c  pontifex.h  solitaire.c  solitaire.h  util.c  util.h
test/: Makefile.am  card_test.c  card_test.h  deck_test.c  deck_test.h  deckgen_test.c  pontifex_test.c  pontifex_test.h  solitaire_test.c
test/vectors/: test1.deck  test2.deck  test2b.deck  test3.deck  test3b.deck  test4.deck  test4b.deck  test5.deck  test5b.deck
