AC_PREREQ([2.50])
AC_INIT([solitaire],
        [0.1.0-pre],
        [coder@kyleisom.net], [],
        [https://github.com/kisom/solitaire])
AM_INIT_AUTOMAKE([1.11 foreign no-define color-tests parallel-tests])
AM_SILENT_RULES([yes])
AC_CONFIG_SRCDIR([src/card.h])
AC_CHECK_HEADERS
AC_CONFIG_FILES(test/Makefile doc/Makefile src/Makefile Makefile)
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL

AC_OUTPUT

